# markov_models

./: Cargo.toml
markov_ngram/: Cargo.toml
markov_ngram/src/: main.rs  ngram_model.rs
markov_silhouette/: .envrc  Cargo.toml
markov_silhouette/get_silhouettes/: cleanup_silhouettes.py  image_search.py  main.py  noun_gen.py  process_silhouette.py
markov_silhouette/src/: bitmanip.rs  layered_model.rs  main.rs  naive_model.rs
markov_silhouette/src/bitmanip/: bitmatrix.rs  bitvec.rs
