[package]
name = "markov_silhouette"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version="0.8.4", features=["small_rng"] }
image = "0.23.14"
smallvec = { version="1.6.1", features=["serde"] }
rayon = "1.5.1"
approx = "0.5.0"
serde = { version="1.0.130", features=["derive"] }
bincode = "1.3.3"
